--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}" />
   <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  {% include 'partials/fonts.html' %}
   {% block head %}{% endblock %}
   <script src="{{ url_for('static', filename='js/loader.js') }}" defer></script>
 </head>
