--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+  {% include 'partials/fonts.html' %}
   <script src="{{ url_for('static', filename='js/loader.js') }}" defer></script>
 </head>
 <body class="bg-background min-h-screen flex items-center justify-center">
