--- a/templates/camera_gate.html
+++ b/templates/camera_gate.html
@@ -1,5 +1,5 @@
 {% extends "base_public.html" %}
-{% block title %}Interview Setup{% endblock %}
+{% block title %}Welcome{% endblock %}
 
 {% block content %}
 <div class="max-w-4xl mx-auto">
